packages/components/src/HeaderBar/HeaderBar.scss
$background-color-on-hover: shade($brand-primary, 30);
@keyframes fadeIn {
	from {
		opacity: 0;
	}

	to {
		opacity: 1;
	}
}

.tc-header-bar {
	background-color: $brand-primary-darker;
	display: flex;
	position: fixed;
	top: 0;
	width: 100%;
	z-index: 1030;

	& {
		svg {
			margin: 0;
		}
		a svg {
			margin: 0 $padding-smaller;
		}
	}

	.tc-header-bar-actions {
		align-items: center;
		display: flex;
		padding: 0;
		margin: 0;

		&.right {
			margin-left: auto;
		}

		.tc-header-bar-action {
			height: 100%;
			list-style: none;
			white-space: nowrap;

			:global {
				.tc-typeahead-item-title,
				.tc-typeahead-item-description {
					white-space: initial;
				}
			}

			&:not(:last-child).separated:after {
				content: '|';
				color: $white;
			}

			&.flex {
				display: flex;
				align-items: center;
			}
		}

		.tc-header-bar-logo:global(.btn):global(.btn-link) {
			line-height: $svg-lg-size;
			padding: 12px $padding-large 12px $padding-normal;

			:global(.tc-svg-icon) {
				height: $svg-lg-size;
				vertical-align: top;
				width: $svg-lg-size;
			}

			&.full :global(.tc-svg-icon) {
				width: 85px;
			}
		}

		.tc-header-bar-brand:global(.btn):global(.btn-link) {
			font-size: $font-size-base;
			text-transform: uppercase;
		}
	}

	.tc-header-bar-products + :global(.dropdown-menu) :global(.tc-svg-icon) {
		fill: $st-tropaz;
		height: $svg-lg-size;
		width: $svg-lg-size;
	}

	.tc-header-bar-brand + :global(.dropdown-menu .tc-svg-icon) {
		fill: $st-tropaz;
		height: $svg-md-size;
		width: $svg-md-size;
	}

	.tc-header-bar-brand + :global(.dropdown-menu) {
		min-width: 100%;
		width: auto;
	}

	:global(.btn):global(.btn-link) {
		color: $white;
		font-size: $font-size-base;
		text-transform: none;
		text-decoration: none;

		&:hover,
		&:active {
			background-color: $background-color-on-hover;
		}
	}

	:global(.dropdown) {
		height: 100%;

		:global(.caret) {
			box-shadow: 2px -2px 0 $white;
			border: none;
			margin-left: $padding-small;
			margin-bottom: $padding-smaller;
		}

		&:global(.open) {
			:global(.caret) {
				margin-top: $padding-small;
			}
			:global(.btn):global(.btn-link) {
				background-color: $background-color-on-hover;
			}
		}
	}

	.tc-header-bar-search {
		form {
			height: $navbar-height;

			:global(.tc-typeahead-container) > div:first-child {
				margin-top: 0;
				margin-bottom: 0;

				padding-left: $padding-small;
				padding-right: $padding-large;
				height: $navbar-height;
				background: $white;

				:global(.form-control) {
					font-style: italic;
					animation: fadeIn 0.2s;
					width: 400px;
				}
			}
		}
	}
}

